- Fixed issue with email address on checkout
- Fixed potential product load problem in IsotopeProductCollection
- Fixed potential problem with rule product restrictions
- Fixed bug with rule limits per store config or member
- Fixed potential issue with member ID in rules
- Fixed potentially wrong publish-status icon (Ticket #437)
- Fixed order items not deleted when deleting orders (Ticket #438)
- Fixed: copying mail template did not duplicate languages
- Removed default list template in tl_content
- Minor code cleanup

Version 0.2.7 (2011-03-09)
------------------------------
- Added support for language switching on checkout page (changelanguage extension)
- Added support for language switching on order details page (changelanguage extension)
- Added support for __isset() to product, collection, gallery, payment and shipping classes (Contao Core Ticket #2897)
- Added root page option to product list module (Ticket #366)
- Improved ajax overlay position and transparency
- Fixed potential SQL injection in product collection
- Fixed CSS classes in checkout review and order details
- Fixed emails not sent to customers (Ticket #406)
- Fixed tax calculation for prices including taxes and discount
- Fixed float precision on discount rules
- Fixed orders not appearing for non-admin users

Version 0.2.6 (2011-03-01)
------------------------------
- Added label for toggle button in product tree
- Added missing 'enabled' label to tl_iso_shipping_options (Ticket #373)
- Added support for language switching on product reader page (changelanguage extension)
- Added: automatically disable page cache for sites with customer-related modules such as Cart (Ticket #392)
- Improved: Check isDefaultBilling/isDefaultShipping on first checkout
- Improved: Label for payment method is no longer mandatory (will use name if not set)
- Improved: Made text fields for meta description & meta keywords smaller (Ticket #386)