@@ -379,6 +379,7 @@ class IsotopeRules extends Controller
 	{
 		$arrProducts = $this->Isotope->Cart->getProducts();
 		
+		$blnMatch = false;
 		$blnDiscount = false;
 		if (strpos($arrRule['discount'], '%') !== false)
 		{
@@ -454,7 +455,6 @@ class IsotopeRules extends Controller
 				continue;
 			}
 			
-			
 			// Apply To
 			switch( $arrRule['applyTo'] )
 			{
@@ -479,19 +479,20 @@ class IsotopeRules extends Controller
 					break;
 					
 				case 'cart':
+					$blnMatch = true;
 					$arrSurcharge['total_price'] += $objProduct->total_price;
 					break;
 			}
 		}
 		
-		if ($arrRule['applyTo'] == 'cart')
+		if ($arrRule['applyTo'] == 'cart' && $blnMatch)
 		{
 			$fltPrice = $blnDiscount ? ($arrSurcharge['total_price'] / 100 * $fltDiscount) : $arrRule['discount'];
 			$arrSurcharge['total_price'] = $fltPrice > 0 ? (floor($fltPrice * 100) / 100) : (ceil($fltPrice * 100) / 100);
 			$arrSurcharge['before_tax'] = false;
 		}
 		
-		return $arrSurcharge['total_price'] == 0 ? false: $arrSurcharge;
+		return $arrSurcharge['total_price'] == 0 ? false : $arrSurcharge;
 	}
 }
 
