@@ -15,6 +15,7 @@ Version 0.2.8 (2011-04-??)
 - Fixed potential issue with member ID in rules
 - Fixed potentially wrong publish-status icon (Ticket #437)
 - Fixed order items not deleted when deleting orders (Ticket #438)
+- Fixed issue in cart rules, some were applied even if no product matched
 - Fixed: copying mail template did not duplicate languages
 - Removed default list template in tl_content
 - Minor code cleanup
